--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
-flask
-Flask-SQLAlchemy
-flask-login
-
-
-
+Flask==3.0.2
+Werkzeug==3.0.1
+Jinja2==3.1.3
+click==8.1.7
+itsdangerous==2.1.2
+MarkupSafe==2.1.5
+blinker==1.7.0
+Flask-SQLAlchemy==3.1.1
+flask-login==0.6.3
+gunicorn==21.2.0
